I modified index.html file

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="overlay"></div>
         <div class="container">
             <div class="header-area">
-                <div class="logo">LOGO</div>
+                <div class="logo">Mohamad</div>
                 <div class="links-container">
                     <ul class="links">
                         <li><a href="#" data-section=".landing-page">Home</a></li>
@@ -119,9 +119,8 @@
         </div>
 
         <div class="introduction-text">
-            <h1>We are <span>creative</span> agency</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, suscipit.
+            <h1>I am <span>a Software</span> Engineer</h1>
+            <p>Web designer and developer with the latest ideas and technologies
             </p>
         </div>
         
@@ -132,8 +131,8 @@
 <div class="container">
     <div class="about-us">
         <div class="info-box">
-            <h2>About US</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam consectetur numquam nulla quaerat sed, dolor magni consequatur temporibus.</p>
+            <h2>About Me</h2>
+            <p>I am a software engineer, I work in the field of designing and developing websites</p>
         </div>
         <div class="image-box">
             <img src="images\about.webp" alt="">
